add styling component

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <body>
     <h1>modal project</h1>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
