--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>modal project</h1>
+   
+    <!--hero-->
+<header class="hero">
+    
+</header>
+    <!--end of hero-->
+    
     <!-- javascript -->
     <script src="scripts.js"></script>
   </body>
