add modal header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
    
     <!--hero-->
 <header class="hero">
-    
+   <div class="banner">
+    <h1>Modal Project</h1>
+   </div> 
 </header>
     <!--end of hero-->
     
