add modal button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <header class="hero">
    <div class="banner">
     <h1>Modal Project</h1>
+    <button class="btn btn-modal"></button>
    </div> 
 </header>
     <!--end of hero-->
