--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
 <header class="hero">
    <div class="banner">
     <h1>Modal Project</h1>
-    <button class="btn btn-modal"></button>
+    <button class="btn modal-btn">
+        open modal
+    </button>
    </div> 
 </header>
     <!--end of hero-->
+    <!--modal-->
+    <div class="modal-overlay">
+        <div class="modal-container">
+            
+        </div>
+    </div>
     
     <!-- javascript -->
     <script src="scripts.js"></script>
