add fontawesome icon

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <!--modal-->
     <div class="modal-overlay">
         <div class="modal-container">
-            
+          <h3>modal content</h3>  
+          <button class="close-btn" >
+            <i fas fa-times></i>
+          </button>
         </div>
     </div>
     
