--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="modal-container">
           <h3>modal content</h3>  
           <button class="close-btn" >
-            <i fas fa-times></i>
+            <i class="fas fa-times"></i>
           </button>
         </div>
     </div>
